# servents

./: .gitignore  .gitmodules  AGENTS.md  FABLE-AUDIT.md  README.md  REMEDIATION-PLAN.md  SERVENTS-IMPLEMENTATION-PLAN.md  hacs.json  manifest.json  pyproject.toml  sensor.py
.github/workflows/: lint-and-test.yml
custom_components/servents/: __init__.py  binary_sensor.py  button.py  climate.py  command_entity.py  config_flow.py  const.py  cover.py  data_carriers.py  date.py  datetime.py  definitions.py  deserialization.py  entity.py  event.py  fan.py  light.py  lock.py  manifest.json  number.py  registrar.py  select.py  sensor.py  services.py  services.yaml  siren.py  switch.py  text.py  time.py  utilities.py  valve.py
custom_components/servents/binary_sensor/: __init__.py  threshold_binary_sensor.py
custom_components/servents/sensor/: __init__.py  sensor.py
custom_components/servents/translations/: en.json
scripts/: live_ha_e2e.py
tests/: conftest.py  test_command_entity.py  test_data_carriers.py  test_definitions.py  test_domovoy_wire_format.py  test_entity_base.py  test_init.py  test_platform_entities.py  test_registrar.py  test_services.py
translations/: en.json
