[project]
name = "servents"
version = "0.6.0"
description = "ServEnts - Service Defined Entities"
authors = [{ name = "Carlos G. Sarmiento", email = "carlos@sarmiento.io" }]
requires-python = ">=3.13.2"
readme = "README.md"
dependencies = ["servents-data-model>=0.6.0"]

[dependency-groups]
dev = ["homeassistant>=2025.11.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "ARG"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
