[project]
name = "servents"
version = "0.6.0"
description = "ServEnts - Service Defined Entities"
authors = [{ name = "Carlos G. Sarmiento", email = "carlos@sarmiento.io" }]
requires-python = ">=3.13.2"
readme = "README.md"
dependencies = ["servents-data-model>=0.10.0"]

[tool.uv.sources]
servents-data-model = { path = "servents-data-model" }

[dependency-groups]
dev = ["homeassistant>=2025.11.0", "pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "ARG"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
